# beam

./: CMakeLists.txt
src/: main.cpp
src/core/: camera.h  film.h  hittable.h  material.h  ray.h  renderer.cpp  renderer.h  rng.h  sampling.h  scene.h  transform.h
src/examples/: example1.h
src/materials/: dielectric.h  lambertian.h  metal.h
src/objects/: sphere.cpp  sphere.h
